Main navigation wraps to two lines in Chrome depending on zoom level, fixing with padding adjustment

--- a/sites/all/themes/baddercamp/css/navigation.css
+++ b/sites/all/themes/baddercamp/css/navigation.css
@@ -54,7 +54,7 @@ li a.active {
   display: block;
   line-height: 25px;
   height: 25px; /* 55 - 15 - 15 */ 
-  padding: 10px 15px;
+  padding: 10px 13px;
   font-family: superclarendon, Georgia,serif;
   color: #fff;
   text-transform: uppercase;
